--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body style="text-align: center">
     <canvas id="unity-canvas" width=960 height=600 style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/Silma Catalogo.loader.js"></script>
+    <script src="Build/Gallery_Data.loader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Silma Catalogo.data",
-        frameworkUrl: "Build/Silma Catalogo.framework.js",
-        codeUrl: "Build/Silma Catalogo.wasm",
+        dataUrl: "Build/Gallery_Data.data",
+        frameworkUrl: "Build/Gallery_Data.framework.js",
+        codeUrl: "Build/Gallery_Data.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Gallery",
